--- a/.github/docker-publish.yaml
+++ b/.github/docker-publish.yaml
@@ -36,7 +36,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.TOKEN }}
 
       - name: Build and Push
         uses: docker/build-push-action@v5
