--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -3,7 +3,7 @@ name: Docker
 on:
   push:
     branches:
-      - master
+      - main
 
 permissions:
   contents: read
@@ -20,6 +20,7 @@ jobs:
       matrix:
         image:
           - {type: "go", image: "1.23", PREFIX: "go", SUFFIX: "", context: "./go", platforms: "linux/amd64,linux/arm64"}
+          - {type: "go", image: "1.24", PREFIX: "go", SUFFIX: "", context: "./go", platforms: "linux/amd64,linux/arm64"}
 
     steps:
       - name: Code checkout
